# src/docs/swagger.json
@@ -21,8 +21,17 @@
                             "type": "object"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
                     }
                 }
             }
@@ -44,8 +53,17 @@
                             "$ref": "#/definitions/customTypes.FilesResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
                     }
                 }
             }
@@ -68,7 +86,10 @@
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
                     }
                 }
             },
@@ -104,8 +125,17 @@
                             "$ref": "#/definitions/customTypes.FilesResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
                     }
                 }
             },
@@ -125,8 +155,17 @@
                             "$ref": "#/definitions/customTypes.FilesResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
                     }
                 }
             }
@@ -148,8 +187,11 @@
                             "$ref": "#/definitions/customTypes.FilesResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error"
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.HttpError"
+                        }
                     }
                 }
             }
@@ -186,6 +228,17 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        },
+        "pkg.HttpError": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
                 }
             }
         }
